@@ -1,6 +1,8 @@
             Bangle.js: Improved HRM calculations - swapped autocorrelation for bandpass filter
             Bangle.js: Significantly improved step counting algorithm using bandpass filter (fix #1846)
             Bangle.js: Ignore touch and swipe events when the LCD is off
+            Bangle.js: Don't reset all peripherals when loading a new app, and only
+              turn peripherals off if unused 500ms after starting new app
 
      2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
             Fix Math.acos for negative values (fix #1950)
